POWR-719 change Back button text in entity embed dialog, fix align field labels, put a little padding in styled CKEditor body, renamed portland_media_embed_classes to _helper since it now contains additional functionality beyond the classes filter.

--- a/web/themes/custom/cloudy/scss/components/_form.scss
+++ b/web/themes/custom/cloudy/scss/components/_form.scss
@@ -19,3 +19,19 @@
 .views-exposed-form .form-actions {
   @extend .align-self-end;
 }
+
+/* fix for superfluous label colons in entity embed alignment form, bad alignment and mismatched label bolding */
+.form-item-attributes-data-align label:after, .form-item-attributes-data-align .label:after {
+  content: none !important;
+}
+.form-item-attributes-data-align label {
+  margin-right: 10px;
+}
+.form-item-attributes-data-caption label {
+  font-weight: bold;
+}
+
+/* put a little padding in styled CKEditor body */
+.cke_editable {
+  margin: 10px;
+}
